--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,19 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+jupyter = "*"
+matplotlib = "*"
 
 [packages]
 flask = "*"
 flask-sqlalchemy = "*"
+tweepy = "*"
+python-dotenv = "*"
+spacy = "*"
+scikit-learn = "*"
+pandas = "*"
+gunicorn = "*"
+psycopg2-binary = "*"
 
 [requires]
 python_version = "3.8"
